media/gpu: Fix scoped_refptr parameter passing.

According to
https://chromium.googlesource.com/chromium/src/+/master/styleguide/c++/c++.md#object-ownership-and-calling-conventions
scoped_refptr should be passed by value, not by reference.

This CL focus on image_processor. More than 200+ lines need to be
fixed in media/gpu:
~/chrome/src/media/gpu$ grep -r "const scoped_refptr<.*>&" | wc
    226    1068   21515

BUG=chromium:906479
TEST=Run VEA VDA unittest on devices (peach_pit and elm)
VEA:
video_encode_accelerator_unittest \
--test_stream_data=bear-320x180.yuv:320:180:1:bear.mp4:100000:30 \
--disable_flush --single-process-tests -v=0

VDA:
video_decode_accelerator_unittest \
--test_stream_data=/usr/local/video/test-25fps.h264:320:240:250:258:\
35:150:1 -v=0 --disable_flush --single-process-tests --ozone-platform=gbm

Change-Id: I963501af745124e565eee4a3febf5a0957d53e10
Reviewed-on: https://chromium-review.googlesource.com/c/1341288
Reviewed-by: Hirokazu Honda <hiroh@chromium.org>
Commit-Queue: Shuo-Peng Liao <deanliao@google.com>
Cr-Commit-Position: refs/heads/master@{#609197}
Former-commit-id: e78aab743e1f03b66cddff8fb3457745ef43ded3